fixed home page content wrap

--- a/sass/components/_content-wrap.scss
+++ b/sass/components/_content-wrap.scss
@@ -4,9 +4,11 @@
 //////////////////////////////
 
 .content-wrap {
-  @include clearfix();
-  padding: $space;
-  border-top: $border-width solid $yellow;
-  background-color: $white;
-  margin-top: $space;
+  .not-front & {
+    @include clearfix();
+    padding: $space;
+    border-top: $border-width solid $yellow;
+    background-color: $white;
+    margin-top: $space;
+  }
 }
